--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ setuptools = "^69.0.2"
 django-permissions-policy = "^4.18.0"
 django-csp = "^3.7"
 django-defender = "^0.9.7"
+beautifulsoup4 = "^4.12.3"
+recipe-scrapers = "^14.55.0"
 
 [tool.poetry.group.dev.dependencies]
 coverage = "^7.2.7"
